[package]
name = "repro_tui_bug"
version = "0.1.0"
authors = ["Yerkebulan Tulibergenov <yerkebulan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11"
env_logger = "0.7.1"
log = "0.4.8"

[patch.crates-io]
console = { git = "https://github.com/mitsuhiko/console" }
